# Graphics_Rust

./: CHANGELOG.md  Cargo.toml  CheckList.md  README.md  TODO.md
.cargo/: config.toml
core/: Cargo.toml
core/src/: lib.rs
graphic/: Cargo.toml  README.md  iced_backend_
graphic/iced_backend/: Cargo.toml
graphic/iced_backend/src/: backend.rs
graphic/src/: file.rs  gui.rs  lib.rs  plotter_values.rs  svg.rs
log/: Cargo.toml
log/src/: convert.rs  csv.rs  invertor.rs  json.rs  lib.rs  main.rs  structs.rs
log_new/: Cargo.toml  README.md
log_new/src/: async_channel.rs  convert.rs  files.rs  lib.rs  main.rs  stat_info.rs  telegram.rs  utils.rs  value.rs
log_new/src/files/: csv.rs  excel.rs
log_new/src/files/excel/: sheet.rs
log_new/src/stat_info/: advance.rs  simple.rs
meln_logic/: Cargo.toml  README.md
meln_logic/macros/: Cargo.toml  lib.rs  macros.rs
meln_logic/src/: algorithm.rs  devices.rs  init.rs  init_clear.rs  invertor_engine.rs  lib.rs  main.rs  meln.rs  structs.rs
meln_logic/src/meln/: dozator.rs  half_meln.rs  klapans.rs  material.rs  oil_station.rs  vacuum_station.rs
meln_logic/src/structs_1/: mod.rs
meln_logic/src/structs_2/: dozator.rs  half_meln.rs  klapans.rs  material.rs  meln.rs  mod.rs  oil_station.rs  property.rs  vacuum_station.rs
meln_logic/src/watcher/: mod.rs  property.rs
modbus/: Cargo.toml  README.md
modbus/src/: async_logic.rs  builder.rs  device.rs  lib.rs  main.rs  modbus_context.rs  sensor.rs  value.rs
modbus/src/devices/: invertor.rs  mod.rs  owen_digit_io.rs
modbus/src/devices/invertor/: error.rs
modbus/src/init/: device.rs  devices.rs  invertor_parametr.csv  mod.rs  sensor.rs  value.rs
modbus/src/invertor/: error.rs
modbus/src/modbus_1/: mod.rs
modbus/src/modbus_2/: device.rs  invertor.rs  mod.rs  modbus_context.rs  modbus_context_1.rs  modbus_context_2.rs  modbus_context_3.rs  owen_digit_io.rs  sensor.rs  value.rs
modbus/src/modbus_2/init/: device.rs  mod.rs  sensor.rs  value.rs
modbus/src/modbus_2/modbus_context/: modbus_context_1_async.rs  modbus_context_3.rs
modbus/src/modbus_2/runtime/: sensor.rs  value.rs
modbus/src/modbus_3/: device.rs  mod.rs  sensor.rs  value.rs
modbus/src/modbus_context/: modbus_context_1.rs  modbus_context_1_async.rs  modbus_context_3.rs
modbus/src/value/: modbusvalues.rs  tests.rs  types.rs
src/: .gitignore  app_complect_simple_ui.rs  app_complex_simple_ui.rs  app_config.rs  app_config_invertor.rs  app_stand_graphic.rs  app_test.rs  app_test_klapan.rs  graphic.rs  invertor_log.txt  main.rs  main_app_test_device.rs  modbus_device.rs  modbus_sensor.rs  modbus_value.rs
src/app_graphic/: mod.rs
src/app_test_device/: mod.rs  test_invertor.rs
src/app_test_device/owen/: io_digit.rs  mod.rs  pwm.rs
src/modbus_1/: sensor.rs  value.rs
src/modbus_2/: mod.rs
src/ui/: dozator.rs  info_pane.rs  invertor.rs  klapans.rs  klapans_2.rs  liner_animation.rs  mod.rs  oil_station.rs  property_animation.rs  style.rs  values_list.rs
