[package]
name = "meln_graphics"
version = "0.1.0"
authors = ["alex13sh <alex97sh@yandex.ru>"]
edition = "2018"

[[bin]]
name = "meln_graphics"
path = "src/main.rs"

[[bin]]
name = "app_test_device"
path = "src/main_app_test_device.rs"

[[bin]]
name = "app_stand_graphic"
path = "./src/app_stand_graphic.rs"

[[bin]]
name = "app_config"
path = "./src/app_config.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced = { version = "0.2",  features = ["canvas", "tokio", "svg"] }
# iced_native = { version = "0.2"}

futures = "0.3.12"
chrono = "0.4"
coarse-prof = {version = "0.2.4"}
# log = "0.4.0"
env_logger = "0.8.2"

log = {path = "./log"}
modbus = {path = "./modbus"}
meln_logic = {path = "./meln_logic"}
graphic = {path = "./graphic"}

[dependencies.iced]
#path = "../plotters"
# version = "0.2"
git = "https://github.com/hecrj/iced"
features = ["canvas", "tokio", "svg"] 

[dependencies.iced_native]
git = "https://github.com/hecrj/iced"

[workspace]
members = [
    "log",
    "modbus",
    "meln_logic",
    "meln_logic/macros",
    "graphic",
]

[features]
default = ["graphic/plotters", "graphic/iced_backend"] #, "test"]

test = ["modbus/test"]

# [profile.release]
# debug = true
