[package]
name = "meln_graphics"
version = "0.1.0"
authors = ["alex13sh <alex97sh@yandex.ru>"]
edition = "2018"
resolver = "2"

[[bin]]
name = "meln_graphics"
path = "src/main.rs"

[[bin]]
name = "app_test_device"
path = "src/main_app_test_device.rs"

[[bin]]
name = "app_stand_graphic"
path = "./src/app_stand_graphic.rs"

[[bin]]
name = "app_complex_simple_ui"
path = "./src/app_complex_simple_ui.rs"


[[bin]]
name = "app_test_klapan"
path = "./src/app_test_klapan.rs"

[[bin]]
name = "app_config"
path = "./src/app_config.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["canvas", "tokio", "svg"] }
iced_native = "0.3"
iced_futures = "0.3"

futures = "0.3.12"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.3.0", features = ["sync", "macros"]}
async-stream = "*"

chrono = "0.4"
coarse-prof = {version = "0.2.4"}
# log = "0.4.0"
env_logger = "0.8.2"

log = {path = "./log"}
modbus = {path = "./modbus"}
meln_logic = {path = "./meln_logic"}
graphic = {path = "./graphic"}

[patch.crates-io]
iced = {git = "https://github.com/hecrj/iced", rev="391825788"}
iced_native = {git = "https://github.com/hecrj/iced", rev="391825788"}
iced_futures = {git = "https://github.com/hecrj/iced", rev="391825788"}

[workspace]
members = [
    "log",
    "modbus",
    "meln_logic",
    "meln_logic/macros",
    "graphic",
]

[features]
default = ["graphic/plotters", "graphic/iced_backend"] #, "test"]

test = ["modbus/test"]

# [profile.release]
# debug = true
