[package]
name = "graphic"
version = "0.1.0"
authors = ["alex13sh <alex97sh@yandex.ru>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced = { version = "0.2",  features = ["canvas", "svg"] }
# iced_native = { version = "0.2"}

futures = "0.3.12"
chrono = "0.4"
coarse-prof = {version = "0.2.4"} #, path = "../coarse-prof-0.2.4"}

log = {path = "../log"}

[dependencies.iced]
git = "https://github.com/hecrj/iced"
features = ["canvas", "svg"] 

[dependencies.iced_native]
git = "https://github.com/hecrj/iced"

[dependencies.plotters]
#path = "../plotters"
version = "0.3.0"
optional = true
default-features = false
features = [ "chrono", "line_series", "svg_backend"] # "iced_back"]

[dependencies.iced_backend]
path = "./iced_backend/"
optional = true


[features]
default = ["plotters", "iced_backend"]

# [profile.release]
# debug = true
