[package]
name = "graphic"
version = "0.1.0"
authors = ["alex13sh <alex97sh@yandex.ru>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3",  features = ["canvas", "svg"], optional = true }
iced_native = { version = "0.3"}

futures = "0.3.12"

coarse-prof = {version = "0.2.4"} #, path = "../coarse-prof-0.2.4"}

log_new = {path = "../log_new"}

[dependencies.plotters]
#path = "../plotters"
version = "0.3.0"
optional = true
default-features = false
features = [ "chrono", "line_series", "svg_backend"] # "iced_back"]

[dependencies.iced_backend]
path = "./iced_backend/"
optional = true


[features]
default = ["plotters"]
gui = ["iced", "iced_backend"]

# [profile.release]
# debug = true

[dev-dependencies]
futures = "*"
