[package]
name = "log"
version = "0.1.0"
authors = ["alex13sh <alex97sh@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1.5"
directories = "2.0"
