[package]
name = "log_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
#csv = "1.1.5"
umya-spreadsheet = "0.2.2"

directories = "2.0"
chrono = "0.4"

#stream_router = "https://github.com/BroderickCarlin/stream_router"
futures = "*"

[dependencies.csv]
version = "1.1.5"
git = "https://github.com/gootorov/rust-csv"
branch = "serde-flatten"

[patch.crates-io]
csv = {version = "1.1.6", git = "https://github.com/gootorov/rust-csv", branch ="serde-flatten"}
