[package]
name = "log_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# csv = ["csv"]
excel = ["umya-spreadsheet"]

#[features.test]
#default = ["csv", "excel"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
#csv = "1.1.5"
# umya-spreadsheet = "0.5.2"
umya-spreadsheet = {path = "../../libs/umya-spreadsheet", optional=true}
spreadsheet-ods = {version = "0.9", optional=true}

directories = "2.0"
chrono = "0.4"
rayon = "*"

coarse-prof = {version = "0.2.4"}
derive_more = "0.99"

#stream_router = "https://github.com/BroderickCarlin/stream_router"
futures = "*"
postage = { version = "*", default-features = false, features=["futures-traits"]}

[dependencies.csv]
version = "1.1.5"
git = "https://github.com/gootorov/rust-csv"
branch = "serde-flatten"
optional=true

[patch.crates-io]
csv = {version = "1.1.6", git = "https://github.com/gootorov/rust-csv", branch ="serde-flatten"}

[dependencies.tokio]
version = "1.12.0"
features = ["macros", "rt-multi-thread"]
