[package]
name = "meln_logic"
version = "0.1.0"
authors = ["Алексей (Работа) <alex76sh1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "meln_logic"

# path = "./src/init_2.rs"

[dependencies]
tokio = { version = "1.12.0", features = ["sync", "macros"]}
async-stream = "*"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4.14"

macros = {path="./macros", package="meln_logic_macro", optional=true}
modbus = {path = "../modbus"}

# [workspace]
# members = ["macros"]

[features]
default = []
