[package]
name = "modbus"
version = "0.1.0"
authors = ["alex13sh <alex97sh@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.1.1"
thiserror = "1.0"

[dependencies.tokio-modbus]
optional = true
version = "*"
default-features = false
features = ["tcp", "sync"]

[dependencies.libmodbus-rs]
optional = true
version = "*"

[features]
default = ["libmodbus-rs"]
test = []
