[package]
name = "modbus"
version = "0.1.0"
authors = ["alex13sh <alex97sh@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.1.1"
thiserror = "1.0"
tokio = { version = "1.3.0", features = ["sync", "macros"]}
futures = "0.3.12"
log = "0.4.14"

[dependencies.tokio-modbus]
optional = true
# version = "*"
git = "https://github.com/ivoisbelongtous/tokio-modbus"
branch = "tokio1"
default-features = false
features = ["tcp", "sync"]

[dependencies.libmodbus-rs]
optional = true
version = "*"

[dependencies.modbus-rs]
package = "modbus"
optional = true
version = "*"

[features]
default = ["tokio-modbus", "time"]
test = []
time = ["tokio/time"]
